--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.0",
@@ -22,6 +23,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "shortid": "^2.2.16",
+    "sweetalert2": "^11.1.7",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
@@ -51,7 +54,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.7",
-    "postcss": "^7.0.38",
+    "postcss": "^8.3.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
   }
 }
