--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.1",
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.1",
@@ -15,7 +17,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "date-fns": "^2.25.0",
     "immer": "^9.0.6",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.0",
