--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "chart.js": "^3.6.0",
     "date-fns": "^2.25.0",
     "immer": "^9.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.0",
     "react-redux": "^7.2.5",
