--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "chart.js": "^3.6.0",
+    "clsx": "^1.1.1",
     "date-fns": "^2.25.0",
     "immer": "^9.0.6",
     "moment": "^2.29.1",
