--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^8.0.3",
     "shortid": "^2.2.16",
     "sweetalert2": "^11.1.7",
+    "swr": "^1.1.0",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.17.4",
     "yup": "^0.32.9"
