--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.0",
+    "react-query": "^3.34.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "shortid": "^2.2.16",
     "sweetalert2": "^11.1.7",
-    "swr": "^1.1.0",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.17.4",
     "yup": "^0.32.9"
