--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.14.2",
     "react-toastify": "^8.0.3",
     "shortid": "^2.2.16",
     "sweetalert2": "^11.1.7",
